[Gradle JDK automanagment] GradleWrapperMain patching (#341)
[Gradle JDK automanagment] GradleWrapperMain patching logic